--- a/index.html
+++ b/index.html
@@ -91,10 +91,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <p>I have the experience that tackles long-term design projects and remote collaboration
                     between multi-background teams. I can not only deliver design requests but also enrich the design
                     depth and culture of the team. Please check out my work and resume and feel free to contact me!</p>
-                <div class="contact-info">
-                    <p><i class="ion-android-call"></i> +886 919 696 578 </p>
-                    <p><i class="ion-ios-email"></i> horo3355@gmail.com </p>
-                </div>
             </div>
         </div>
 
@@ -102,24 +98,23 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <img src="img/about.jpg" class="img-responsive" alt="My lovely cat" />
         </div>
         <div class="col-md-6">
-
+                            <div class="contact-info">
+                    <p><i class="ion-android-call"></i> +886 919 696 578 </p>
+                    <p><i class="ion-ios-email"></i> horo3355@gmail.com </p>
+                </div>
             <div class="h-10"></div>
             <ul class="social-ul">
-                <li class="box-social"><a href="https://www.linkedin.com/in/yuhsinwang/" target="_blank"><i
-                            class="ion-social-linkedin"></i></a></li>
                 <li class="box-social"><a href="https://www.behance.net/yuhsin33" target="_blank"><i
                             class="fab fa-behance-square"></i></a></li>
+                <li class="box-social"><a href="https://dribbble.com/yuhsin" target="_blank"><i
+                            class="ion-social-dribbble"></i></a></li>
                 <li class="box-social"><a href="https://medium.com/@horo3355" target="_blank"><i
                             class="fab fa-medium"></i></a></li>
-                <li class="box-social"><a href="https://www.dropbox.com/sh/wrmgfehu8galiow/AACIjeMaAa56hYAKFnkp4C9wa?dl=0" target="_blank"><i
-                            class="ion-social-dropbox"></i></a></li>
                 <li class="box-social"><a href="https://www.pinterest.com/horo3355/" target="_blank"><i
                             class="ion-social-pinterest"></i></a></li>
                 <li class="box-social"><a href="https://www.instagram.com/ppplanty/" target="_blank"><i
                             class="ion-social-instagram"></i></a></li>
             </ul>
-
-
         </div>
     </div>
 
