--- a/sweettooth.html
+++ b/sweettooth.html
@@ -64,7 +64,7 @@
         </div>
 
         <div class="col-md-12">
-            <h3 class="text-uppercase">Sweet tooth App</h3>
+            <h4><span style="font-weight:bold;">Sweet tooth App</span></h4>
             <h5>100 Daily UI Challenge</h5>
             <div class="h-30"></div>
         </div>
