--- a/circo_merge.html
+++ b/circo_merge.html
@@ -64,10 +64,11 @@
         </div>
 
         <div class="col-md-12">
-            <h3 class="text-uppercase">Circo</h3>
+            <h4><span style="font-weight:bold;">Circo</span></h4>
             <h5>UI / UX Design, Graphic Design, Package Design</h5>
             <div class="h-30"></div>
         </div>
+
 
         <div class="col-md-9">
             <h4>App</h4>
