--- a/index.html
+++ b/index.html
@@ -127,14 +127,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="no-padding portfolio_container">
 
                 <!-- single work 1 -->
-                <div class="col-md-3 col-sm-6  App">
-                    <a href="sweettooth.html" class="portfolio_item">
-                        <img src="img/sweettooth_gray.png" alt="image" class="img-responsive" />
+                <div class="col-md-3 col-sm-6 App">
+                    <a href="petzzo.html" class="portfolio_item">
+                        <img src="img/petzzo2020.jpg" alt="image" class="img-responsive" />
                         <div class="portfolio_item_hover">
                             <div class="portfolio-border clearfix">
                                 <div class="item_info">
-                                    <span>Sweet tooth</span>
-                                    <em>App</em>
+                                    <span>Petzzo</span>
+                                    <em>Mobile Application</em>
                                 </div>
                             </div>
                         </div>
@@ -150,7 +150,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             <div class="portfolio-border clearfix">
                                 <div class="item_info">
                                     <span>iRent</span>
-                                    <em>App</em>
+                                    <em>Mobile Application</em>
                                 </div>
                             </div>
                         </div>
@@ -166,7 +166,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             <div class="portfolio-border clearfix">
                                 <div class="item_info">
                                     <span>igniteNet</span>
-                                    <em>Web application</em>
+                                    <em>Web Application</em>
                                 </div>
                             </div>
                         </div>
@@ -175,39 +175,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <!-- end single work 3 -->
 
                 <!-- single work 4 -->
-                <div class="col-md-3 col-sm-6 app">
-                    <a href="swc.html" class="portfolio_item">
-                        <img src="img/swc_1000.jpg" alt="image" class="img-responsive" />
-                        <div class="portfolio_item_hover">
-                            <div class="portfolio-border clearfix">
-                                <div class="item_info">
-                                    <span>SWC</span>
-                                    <em>App</em>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <!-- end single work 4 -->
-
-                <!-- single work 5 -->
-                <div class="col-md-3 col-sm-6 app">
-                    <a href="tms.html" class="portfolio_item">
-                        <img src="img/tms_1000_2.jpg" alt="image" class="img-responsive" />
-                        <div class="portfolio_item_hover">
-                            <div class="portfolio-border clearfix">
-                                <div class="item_info">
-                                    <span>TMS</span>
-                                    <em>Website</em>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <!-- end single work 5 -->
-
-                <!-- single work 6 -->
-                <div class="col-md-6 col-sm-12 App">
+                <div class="col-md-3 col-sm-6 App">
                     <a href="circo_merge.html" class="portfolio_item">
                         <img src="img/circo.jpg" alt="image" class="img-responsive" />
                         <div class="portfolio_item_hover">
@@ -220,72 +188,23 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         </div>
                     </a>
                 </div>
-                <!-- end single work 6 -->
+                <!-- end single work 4 -->
 
-                <!-- single work 7 -->
-                <div class="col-md-3 col-sm-6 ads webui">
-                    <a href="artsbank.html" class="portfolio_item">
-                        <img src="img/artsbank.jpg" alt="image" class="img-responsive" />
+                <!-- single work 5 -->
+                <div class="col-md-3 col-sm-6  App">
+                    <a href="sweettooth.html" class="portfolio_item">
+                        <img src="img/sweettooth_gray.png" alt="image" class="img-responsive" />
                         <div class="portfolio_item_hover">
                             <div class="portfolio-border clearfix">
                                 <div class="item_info">
-                                    <span>Artsbank</span>
-                                    <em>App</em>
+                                    <span>Sweet tooth</span>
+                                    <em>Mobile Application</em>
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
-                <!-- end single work 7 -->
-
-                <!-- single work 8 -->
-                 <div class="col-md-3 col-sm-6 app">
-                    <a href="maskmap.html" class="portfolio_item">
-                        <img src="img/maskmap_1000_2.jpg" alt="image" class="img-responsive" />
-                        <div class="portfolio_item_hover">
-                            <div class="portfolio-border clearfix">
-                                <div class="item_info">
-                                    <span>Mask Map</span>
-                                    <em>Website</em>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-
-                <!-- end single work 8 -->
-
-                <!-- single work 9 -->
-                <div class="col-md-3 col-sm-6 web dm">
-                    <a href="ips.html" class="portfolio_item">
-                        <img src="img/ips.jpg" alt="image" class="img-responsive" />
-                        <div class="portfolio_item_hover">
-                            <div class="portfolio-border clearfix">
-                                <div class="item_info">
-                                    <span>Athentek</span>
-                                    <em>Website / DM</em>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <!-- end single work 9 -->
-
-                <!-- single work 10 -->
-                <div class="col-md-3 col-sm-6 illustration">
-                    <a href="line_stamp.html" class="portfolio_item">
-                        <img src="img/sloth.jpg" alt="image" class="img-responsive" />
-                        <div class="portfolio_item_hover">
-                            <div class="portfolio-border clearfix">
-                                <div class="item_info">
-                                    <span>The Sloth Family</span>
-                                    <em>Illustration / LINE Stamp</em>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <!-- end single work 10 -->
+                <!-- end single work 5 -->
             </div>
             <!-- end portfolio_container -->
         </div>
